<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/OutlayStyle">
    <Button
        android:id="@+id/btn_question_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@id/btn_standard_note"
        android:text="@string/question_note"/>
    <Button
        android:id="@+id/btn_standard_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_question_note"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:text="@string/standart_note"/>

    <Button
        android:id="@+id/btn_c_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="c"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_cd_note"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/c_note"/>
    <Button
        android:id="@+id/btn_cd_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="cd"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
        app:layout_constraintLeft_toRightOf="@id/btn_c_note"
        app:layout_constraintRight_toLeftOf="@id/btn_d_note"
        android:text="@string/cd_note"/>
    <Button
        android:id="@+id/btn_d_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="d"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
        app:layout_constraintLeft_toRightOf="@id/btn_cd_note"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/d_note"/>

    <Button
        android:id="@+id/btn_de_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="de"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_e_note"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/de_note"/>
    <Button
        android:id="@+id/btn_e_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="e"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note"
        app:layout_constraintLeft_toRightOf="@id/btn_de_note"
        app:layout_constraintRight_toLeftOf="@id/btn_f_note"
        android:text="@string/e_note"/>
    <Button
        android:id="@+id/btn_f_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="f"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note"
        app:layout_constraintLeft_toRightOf="@id/btn_e_note"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/f_note"/>

    <Button
        android:id="@+id/btn_fg_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="fg"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_g_note"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/fg_note"/>
    <Button
        android:id="@+id/btn_g_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="g"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note"
        app:layout_constraintLeft_toRightOf="@id/btn_fg_note"
        app:layout_constraintRight_toLeftOf="@id/btn_ga_note"
        android:text="@string/g_note"/>
    <Button
        android:id="@+id/btn_ga_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="ga"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note"
        app:layout_constraintLeft_toRightOf="@id/btn_g_note"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/ga_note"/>

    <Button
        android:id="@+id/btn_a_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="a"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_ab_note"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/a_note"/>
    <Button
        android:id="@+id/btn_ab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="ab"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
        app:layout_constraintLeft_toRightOf="@id/btn_a_note"
        app:layout_constraintRight_toLeftOf="@id/btn_b_note"
        android:text="@string/ab_note"/>
    <Button
        android:id="@+id/btn_b_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="b"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
        app:layout_constraintLeft_toRightOf="@id/btn_ab_note"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/b_note"/>

</androidx.constraintlayout.widget.ConstraintLayout>