<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/OutlayStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_question_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_c_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/c_note"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_cd_note"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note" />

    <Button
        android:id="@+id/btn_cd_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cd_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_c_note"
        app:layout_constraintRight_toLeftOf="@id/btn_d_note"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note" />

    <Button
        android:id="@+id/btn_d_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/d_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_cd_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_question_note" />

    <Button
        android:id="@+id/btn_de_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_note"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_e_note"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note" />

    <Button
        android:id="@+id/btn_e_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_de_note"
        app:layout_constraintRight_toLeftOf="@id/btn_f_note"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note" />

    <Button
        android:id="@+id/btn_f_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_e_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_c_note" />

    <Button
        android:id="@+id/btn_fg_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fg_note"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_g_note"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note" />

    <Button
        android:id="@+id/btn_g_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_fg_note"
        app:layout_constraintRight_toLeftOf="@id/btn_ga_note"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note" />

    <Button
        android:id="@+id/btn_ga_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ga_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_g_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_de_note" />

    <Button
        android:id="@+id/btn_a_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_note"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_ab_note"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note" />

    <Button
        android:id="@+id/btn_ab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ab_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_a_note"
        app:layout_constraintRight_toLeftOf="@id/btn_b_note"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note" />

    <Button
        android:id="@+id/btn_b_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_note"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/btn_ab_note"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fg_note" />

</androidx.constraintlayout.widget.ConstraintLayout>