<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/OutlayStyle">

    <TextView
        android:id="@+id/tv_ear_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ear_label"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_ear_note"
        android:text="@string/ear_note"
        app:layout_constraintTop_toBottomOf="@id/tv_ear_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_ear_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_ear_interval"
        android:text="@string/ear_interval"
        app:layout_constraintTop_toBottomOf="@id/tv_ear_label"
        app:layout_constraintLeft_toRightOf="@id/btn_ear_note"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_identify_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/btn_ear_note"
        android:text="@string/identify_label"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_identify_note"
        android:text="@string/identify_note"
        app:layout_constraintTop_toBottomOf="@id/tv_identify_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_identify_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_identify_interval"
        android:text="@string/identify_interval"
        app:layout_constraintTop_toBottomOf="@id/tv_identify_label"
        app:layout_constraintLeft_toRightOf="@id/btn_identify_note"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>